[tool.poetry]
name = "condax"
version = "1.0.0"
description = "Install and run applications packaged with conda in isolated environments"
authors = [
	"Marius van Niekerk <marius.v.niekerk@gmail.com>",
	"Abraham Murciano <abrahammurciano@gmail.com>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mariusvniekerk/condax"
repository = "https://github.com/mariusvniekerk/condax"
documentation = "https://mariusvniekerk.github.io/condax/"
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Topic :: Software Development :: Build Tools",
	"Topic :: System :: Installation/Setup",
	"Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"
userpath = "^1.8.0"
PyYAML = "^6.0"
importlib-metadata = "^4.12.0"
rainbowlog = "^2.0.1"
halo = "^0.0.31"
click-aliases = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.3"
black = "^22.6.0"
mypy = "^0.971"
re-ver = "^0.5.0"
types-PyYAML = "^6.0.11"
types-requests = "^2.28.8"

[tool.poetry.scripts]
condax = "condax.cli.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
